WIP for admin features

--- a/data/tpl/default/standard.css
+++ b/data/tpl/default/standard.css
@@ -53,3 +53,5 @@ pre{margin-top:1px;padding-top:1px;padding-bottom:1px;margin-bottom:1px}
  white-space: -o-pre-wrap;
  word-wrap: break-word;
 }
+
+#editor { font: 120% "Lucida Console", Monaco, monospace;}
